2004/04/05 16:44 (-0500) rwmcfa1

	* pm/SimpleList.pm: pop/shift didn't return the popped/shifted rows.
	push, unshift didn't reutrn the size of the array.

	* t/GtkSimpleList.t: test out fixes from above

	* xs/GtkHandleBox.xs: added enums apidoc for PositionType and
	ShadowType

2004/04/05 09:50 (-0400) muppetman

	* xs/GtkTreeStore.xs: patch from Thierry Vignaud corrects indentation
	on an xsub to appease validators.

2004/04/04 19:26 (+0100) kaffeetisch

	* t/01.GtkWindow.t: Fix the TODO by allowing both, TRUE and FALSE,
	as the return value of is_active and has_toplevel_focus.

	* t/Gdk.t: Don't fail the keyboard_grab test if there already is
	an active keyboard grab.

	* t/PangoTabs.t: Test new and new_with_positions instead of two
	times new.

	Merge from HEAD:

	* xs/Gtk2.xs: Link to Glib::version.

2004/04/04 12:56 (-0500) rwmcfa1

	* xs/Gtk2.xs: quite some warnings in the runtime version checking.

2004/04/04 18:25 (+0100) kaffeetisch

	* xs/GtkStyle.xs: Use a =for object directive to put
	Gtk2::draw_insertion_cursor into the Gtk2::Style man page (instead
	of overwriting Gtk2).

2004/03/25 09:29 (-0500) muppetman

	* examples/combo_box.pl, examples/file_chooser.pl: was using wrong
	version info, very confusing.

2004/03/23 21:15 (-0500) muppetman

	* Gtk2.pm, README, NEWS: stable release 1.040

	* Makefile.PL: require Glib 1.040

	* examples/cellrenderer_popup.pl: bump version check to 1.040

	* t/GtkTreeModelIface.t: disable the TODO failures.

2004/03/24 01:35 (+0100) kaffeetisch

	* t/GtkFileChooser.t: Set select_multiple to FALSE again to make
	the preview stuff work.

	* t/GtkListStore.t: Change the values passed to reorder() to
	something that works for all gtk+ versions.

2004/03/22 11:02 (-0500) muppetman

	* xs/GdkRgb.xs, xs/GdkTypes.xs, xs/GtkSelection.xs: use INT2PTR to
	hush warnings about improper casting on cygwin.

2004/03/21 23:01 (-0500) muppetman

	* xs/GtkTreeSelection: document the return type on get_selected_rows
