@@ -1,3 +1,9 @@
+2004/04/06 18:48 (+0200) kaffeetisch
+
+	* t/GtkTreeView.t
+	* xs/GtkTreeView.xs: Allow undef for the path and column arguments
+	of get_cell_area and get_background_area.
+
 2004/04/05 16:44 (-0500) rwmcfa1
 
 	* pm/SimpleList.pm: pop/shift didn't return the popped/shifted rows.
@@ -13,7 +19,7 @@
 	* xs/GtkTreeStore.xs: patch from Thierry Vignaud corrects indentation
 	on an xsub to appease validators.
 
-2004/04/04 19:26 (+0100) kaffeetisch
+2004/04/04 19:26 (+0200) kaffeetisch
 
 	* t/01.GtkWindow.t: Fix the TODO by allowing both, TRUE and FALSE,
 	as the return value of is_active and has_toplevel_focus.
@@ -32,7 +38,7 @@
 
 	* xs/Gtk2.xs: quite some warnings in the runtime version checking.
 
-2004/04/04 18:25 (+0100) kaffeetisch
+2004/04/04 18:25 (+0200) kaffeetisch
 
 	* xs/GtkStyle.xs: Use a =for object directive to put
 	Gtk2::draw_insertion_cursor into the Gtk2::Style man page (instead
